[ICU-8854] use of inefficient Number constructors. Use valueOf. X-Commit-URL: https://ssl.icu-project.org/trac/changeset/30856 Former-commit-id: d29a91281afc8affde52ce9bbd9a12d1ac690686