@@ -1,6 +1,6 @@
 /*
 *****************************************************************
-* Copyright (c) 2002-2010, International Business Machines Corporation
+* Copyright (c) 2002-2011, International Business Machines Corporation
 * and others.  All Rights Reserved.
 *****************************************************************
 * Date        Name        Description
@@ -177,7 +177,7 @@ class AnyTransliterator extends Transliterator {
             }
         }
 
-        Integer key = new Integer(source);
+        Integer key = Integer.valueOf(source);
         Transliterator t = cache.get(key);
         if (t == null) {
             String sourceName = UScript.getName(source);
